--- a/karpenter/Chart.yaml
+++ b/karpenter/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: karpenter
-description: A Helm chart for deploying Karpenter
+name: voyager-q2
+type: application
 version: 0.1.0
 appVersion: "v0.32.0"
