--- a/karpenter/templates/deployment.yaml
+++ b/karpenter/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "public.ecr.aws/karpenter/controller:v0.33.0"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: 5000
           env:
