--- a/karpenter/values.yaml
+++ b/karpenter/values.yaml
@@ -1,4 +1,9 @@
 replicas: 1
+
 image:
   repository: public.ecr.aws/karpenter/controller
   tag: v0.33.0
+
+settings:
+  clusterName: voyager-cluster
+  clusterEndpoint: https://1EBBAD31A904C4C42E819438A2477EF3.gr7.ap-northeast-2.eks.amazonaws.com
