--- a/karpenter/values.yaml
+++ b/karpenter/values.yaml
@@ -8,6 +8,7 @@ settings:
   clusterName: voyager-cluster
   clusterEndpoint: https://1EBBAD31A904C4C42E819438A2477EF3.gr7.ap-northeast-2.eks.amazonaws.com
 serviceAccount:
+  create: true
   name: karpenter
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::009537862357:role/karpenter-controller-role
