--- a/karpenter/templates/serviceaccount.yaml
+++ b/karpenter/templates/serviceaccount.yaml
@@ -4,4 +4,4 @@ metadata:
   name: karpenter
   namespace: karpenter
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::009537862357:role/karpenter-controller-role
+    eks.amazonaws.com/role-arn: "{{ .Values.settings.aws.roleArn }}"
