--- a/karpenter/values.yaml
+++ b/karpenter/values.yaml
@@ -1,14 +1,26 @@
-replicas: 1
 
-image:
-  repository: public.ecr.aws/karpenter/controller
-  tag: v0.16.3
 
-settings:
-  clusterName: voyager-cluster
-  clusterEndpoint: https://1EBBAD31A904C4C42E819438A2477EF3.gr7.ap-northeast-2.eks.amazonaws.com
+clusterName: voyager-cluster
+karpenterVersion: v0.33.0
+karpenterApiVersion: karpenter.sh/v1
+
 serviceAccount:
   create: true
   name: karpenter
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::009537862357:role/karpenter-controller-role
+
+settings:
+  aws:
+    defaultInstanceProfile: karpenter-node-instance-profile
+    clusterEndpoint: https://0A70DAC60A645C539982DB2CFAE16624.gr7.ap-northeast-2.eks.amazonaws.com
+    roleArn: arn:aws:iam::009537862357:role/karpenter-controller-role
+
+replicas: 1
+image:
+  repository: public.ecr.aws/karpenter/controller
+  tag: v0.33.0
+
+controller:
+  args:
+    - --cluster-name=voyager-cluster
