--- a/karpenter/templates/pods.yaml
+++ b/karpenter/templates/pods.yaml
@@ -1,17 +1,17 @@
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: dummy-pod-1
-# spec:
-#   containers:
-#     - name: pause
-#       image: k8s.gcr.io/pause:3.1
-#   # nodeSelector:
-#   #   karpenter.sh/capacity-type: spot
-#   resources:
-#     requests:
-#       cpu: "2"
-#       memory: "4Gi"
+apiVersion: v1
+kind: Pod
+metadata:
+  name: dummy-pod-1
+spec:
+  containers:
+    - name: pause
+      image: k8s.gcr.io/pause:3.1
+  # nodeSelector:
+  #   karpenter.sh/capacity-type: spot
+  resources:
+    requests:
+      cpu: "2"
+      memory: "4Gi"
 # ---
 # apiVersion: v1
 # kind: Pod
