--- a/karpenter/templates/pods.yaml
+++ b/karpenter/templates/pods.yaml
@@ -2,28 +2,54 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: dummy-pod-1
+  labels:
+    app: dummy-pod-1
 spec:
   containers:
-    - name: pause
-      image: k8s.gcr.io/pause:3.1
+    - name: nginx
+      image: nginx:1.25
+      ports:
+        - containerPort: 80
+      resources:
+        requests:
+          cpu: "250m"
+          memory: "128Mi"
+        limits:
+          cpu: "500m"
+          memory: "256Mi"
+      readinessProbe:
+        httpGet:
+          path: /
+          port: 80
+        initialDelaySeconds: 2
+        periodSeconds: 5
   # nodeSelector:
   #   karpenter.sh/capacity-type: spot
-  resources:
-    requests:
-      cpu: "2"
-      memory: "4Gi"
-# ---
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: dummy-pod-2
-# spec:
-#   containers:
-#     - name: pause
-#       image: k8s.gcr.io/pause:3.1
-#   # nodeSelector:
-#   #   karpenter.sh/capacity-type: spot
-#   resources:
-#     requests:
-#       cpu: "2"
-#       memory: "4Gi"
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: dummy-pod-2
+  labels:
+    app: dummy-pod-2
+spec:
+  containers:
+    - name: nginx
+      image: nginx:1.25
+      ports:
+        - containerPort: 80
+      resources:
+        requests:
+          cpu: "250m"
+          memory: "128Mi"
+        limits:
+          cpu: "500m"
+          memory: "256Mi"
+      readinessProbe:
+        httpGet:
+          path: /
+          port: 80
+        initialDelaySeconds: 2
+        periodSeconds: 5
+  # nodeSelector:
+  #   karpenter.sh/capacity-type: spot
