--- a/karpenter/templates/serviceaccount.yaml
+++ b/karpenter/templates/serviceaccount.yaml
@@ -1,7 +1,7 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: karpenter
-  namespace: karpenter
-  annotations:
-    eks.amazonaws.com/role-arn: "{{ .Values.settings.aws.roleArn }}"
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: karpenter
+#   namespace: karpenter
+#   annotations:
+#     eks.amazonaws.com/role-arn: "{{ .Values.settings.aws.roleArn }}"
